# next

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  android.mk  tsan.supp  versions.mk
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  webui.yml
app/android/: settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/androidTest/java/link/studio/app/: ExampleInstrumentedTest.kt
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: CMakeLists.txt  api.c  logger.h
app/android/app/src/main/java/link/studio/app/: Api.kt  MainActivity.kt
app/android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/android/app/src/test/java/link/studio/app/: ExampleUnitTest.kt
app/android/gradle/: libs.versions.toml
app/android/gradle/wrapper/: gradle-wrapper.properties
app/linux/: CMakeLists.txt  Makefile
app/linux/src/: main.c
cmake/: FindFLAC.cmake  FindOPENH264.cmake  mingw-w64-x86_64.cmake
doc/images/: tracks.drawio
docs/: README.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/.vuepress/: config.js
docs/.vuepress/styles/: index.scss
docs/de/: markdown-examples.md
include/: studiolink.h
libsl/: CMakeLists.txt  Makefile
libsl/cmake/: FindLMDB.cmake
libsl/include/: studiolink.h  studiolink.h.gch
libsl/src/: account.c  audio.c  conf.c  db.c  flac.c  http.c  main.c  meters.c  mix.c  record.c  srcs.mk  tracks.c  ws.c  ws_tracks.c
libsl/src/http/: client.c  server.c
libsl/src/uri/: scheme.c
patches/: baresip_portaudio.patch
src/: Makefile  http.c  main.c  srcs.mk  studiolink.c
src/build-x86_64/: main.d
test/: CMakeLists.txt  Makefile  integration.sh
test/src/: db.c  http.c  init.c  main.c  srcs.mk  test.h  tests.h  tracks.c  ws.c
test/src/mock/: mock_ausrc.c
tests/: Makefile  main.c  sltest
tests/src/: main.c  srcs.mk  tests.h
tests/unit/: main.c  srcs.mk  test.c  test.h
webui/: .eslintrc.js  .eslintrc.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  test_launch.sh  tsconfig.json  vite.config.mts  vite.config.ts
webui/.devcontainer/: Dockerfile  devcontainer.json
webui/src/: App.vue  api.ts  chart.ts  config.ts  index.css  main.ts  shortcuts.ts
webui/src/components/: AudioSettings.vue  BottomActions.vue  HeadStatus.vue  LocalTrack.vue  LocalTrackSettings.vue  Navbar.vue  RemoteTrack.vue  RemoteTrackSettings.vue  RoomsNav.vue  StudioNav.vue  TrackSettings.vue  Tracks.vue  Version.vue
webui/src/components/RemoteTrack/: RemoteTrackCall.vue
webui/src/router/: index.ts
webui/src/states/: debug.ts  meters.ts  tracks.ts
webui/src/views/: DebugView.vue  TrackView.vue
webui_alpine/: .env  index.html  package-lock.json  package.json  vite-plugin-component.js  vite.config.js
webui_alpine/src/components/: button.html
www/: package-lock.json  package.json  tailwind.config.js
